--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
           maternal health and fetal development.
         </li>
         <li>
-          Energy: A 100g serving can provide around \(169\) kcal, though this
+          Energy: A 100g serving can provide around (169) kcal, though this
           will vary with preparation.
         </li>
         <li>
