--- a/index.html
+++ b/index.html
@@ -4,14 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My recipe library</title>
+      <!--Link to css stylesheet-->
+  <link rel="stylesheet" href="/Styles/index.css">
   </head>
+
   <body>
     <!-- Recipe Title and Description-->
-    <h1>Ekemini's Afang Soup Recipe</h1>
-    <p>
+     <header class="Header">
+       <h1>Ekemini's Afang Soup Recipe</h1>
+       <p>
       <strong><h2>How to pepare Afang soup</h2></strong>
     </p>
-    <section>
+        </header>
+
+
+    <section class="Introduction">
       <p>
         Afang soup is fast climbing the top of the list of popular Nigerian
         soup. If you are interested in exploring Nigerian foods, this delicious
@@ -28,40 +35,49 @@
         atama, nsala, and a few other delicious soups.
       </p>
     </section>
+
     <!--Image-->
-    <img
+    <div class="Image">
+      <img
       src="/Assest/Images/How to cook afang soup.jpg"
       alt="How to prepare Afang soup"
       width="700"
       height="400"
     />
+    </div>
     <br />
     <!-- Recipe details-->
-    <section>
+    <section class="Recipe">
       <h3>Recipe Details</h3>
       <p>
         <strong>Preperation time:</strong> Prep time is typically around 15-20
         minutes (Washing, cutting, pounding, grinding ingredients and parboiling
         meat)
       </p>
-      <p><strong>Cook time:</strong></p>
+      <p><strong>Cook time:</strong>
       Cook time 30-40 minutes
-      <p><strong>Servings:</strong></p>
+      </p>
+      <p><strong>Servings:</strong>
       6 people (you can serve with eba fufu or semovita any swallow)
-      <p><strong>Difficulty:</strong></p>
+      </p>
+      <p><strong>Difficulty:</strong>
       It not hard to prepare but might be stressfull than other soups
+      </p>
     </section>
     <!--Ingridient List-->
     <br />
+    <div class="Image2">
     <img
       src="/Assest/Images/Afang.jpg"
       alt="Afang Soup"
       width="700"
       height="400"
     />
+    </div>
     <br />
-    <section>
-      <h3>Ingridients</h3>
+        <main class="main">
+    <section class="Ingredients">
+      <h3>Ingredients</h3>
       <ul>
         <li>15 cups Sliced fresh waterleaves</li>
         <li>1/2 cup of ground crayfish</li>
@@ -78,7 +94,7 @@
       </ul>
     </section>
     <!--Instructions-->
-    <section>
+    <section class="Instructions">
       <h3>Instructions</h3>
       <ol>
         <li>Grind the ukazi leaves, it acts as the thickener for this soup.</li>
@@ -111,7 +127,6 @@
         <li>Serve with Eba, fufu or any swallow of your choice</li>
       </ol>
     </section>
-
     <img
       src="/Assest/Images/Afang soup.jpg"
       alt="Afang soup"
@@ -119,6 +134,7 @@
       height="400"
     />
     <!--Tips-->
+    <div class="container">
     <section>
       <h3>Tips</h3>
       <ul>
@@ -215,8 +231,9 @@
         </li>
       </ul>
     </article>
+
     <!--Link to recipe-->
-    <section>
+    <section class="Originalrecipe">
       <h3>Original recipe source</h3>
       <p>
         <a href="https://allnigerianfoods.com/afang-soup/"
@@ -224,5 +241,6 @@
         >
       </p>
     </section>
+    </div>
   </body>
 </html>
